--- a/scripts/Milestone_Unit3.ipynb
+++ b/scripts/Milestone_Unit3.ipynb
@@ -316,6 +316,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -2577,6 +2582,208 @@
     "plt.ylabel('Actual label')\n",
     "plt.xlabel('Predicted label')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======== Epoch 1 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.12\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.66\n",
+      "  Validation Loss: 1.35\n",
+      "======== Epoch 2 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.13\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.76\n",
+      "  Validation Loss: 1.06\n",
+      "======== Epoch 3 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.12\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.76\n",
+      "  Validation Loss: 1.12\n",
+      "======== Epoch 4 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.08\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.74\n",
+      "  Validation Loss: 1.32\n",
+      "======== Epoch 5 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.04\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.66\n",
+      "  Validation Loss: 1.36\n",
+      "======== Epoch 6 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.03\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.77\n",
+      "  Validation Loss: 1.21\n",
+      "======== Epoch 7 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.77\n",
+      "  Validation Loss: 1.19\n",
+      "======== Epoch 8 / 10 ========\n",
+      "Training...\n",
+      "  Average training loss: 0.02\n",
+      "\n",
+      "Running Validation...\n",
+      "  Accuracy: 0.74\n",
+      "  Validation Loss: 1.29\n",
+      "======== Epoch 9 / 10 ========\n",
+      "Training...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.pytorch\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://localhost:5000/\")\n",
+    "with mlflow.start_run():\n",
+    "    mlflow.log_param(\"learning_rate\", 2e-5)\n",
+    "    mlflow.log_param(\"epochs\", epochs)\n",
+    "    mlflow.log_param(\"batch_size\", train_dataloader.batch_size)\n",
+    "\n",
+    "    # Set the seed value all over the place to make this reproducible\n",
+    "    seed_val = 42\n",
+    "    random.seed(seed_val)\n",
+    "    np.random.seed(seed_val)\n",
+    "    torch.manual_seed(seed_val)\n",
+    "    torch.cuda.manual_seed_all(seed_val)\n",
+    "\n",
+    "    # BERT requires a special optimizer and a learning rate scheduler\n",
+    "    optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
+    "    epochs = 10\n",
+    "    total_steps = len(train_dataloader) * epochs\n",
+    "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
+    "\n",
+    "    # Function to calculate the accuracy of our predictions vs labels\n",
+    "    def flat_accuracy(preds, labels):\n",
+    "        pred_flat = np.argmax(preds, axis=1).flatten()\n",
+    "        labels_flat = labels.flatten()\n",
+    "        return np.sum(pred_flat == labels_flat) / len(labels_flat)\n",
+    "\n",
+    "    # Function for formatting elapsed times\n",
+    "    def format_time(elapsed):\n",
+    "        elapsed_rounded = int(round((elapsed)))\n",
+    "        return str(datetime.timedelta(seconds=elapsed_rounded))\n",
+    "\n",
+    "    # Training Loop\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
+    "\n",
+    "    for epoch_i in range(0, epochs):\n",
+    "        \n",
+    "        # Training\n",
+    "        print('======== Epoch {:} / {:} ========'.format(epoch_i + 1, epochs))\n",
+    "        print('Training...')\n",
+    "\n",
+    "        total_loss = 0\n",
+    "        model.train()\n",
+    "\n",
+    "        for step, batch in enumerate(train_dataloader):\n",
+    "            if step % 40 == 0 and not step == 0:\n",
+    "                elapsed = format_time(time.time() - t0)\n",
+    "                print('  Batch {:>5,}  of  {:>5,}.    Elapsed: {:}.'.format(step, len(train_dataloader), elapsed))\n",
+    "\n",
+    "            batch = tuple(t.to(device) for t in batch)\n",
+    "            b_input_ids, b_input_mask, b_labels = batch\n",
+    "\n",
+    "            model.zero_grad()        \n",
+    "\n",
+    "            outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask, labels=b_labels)\n",
+    "            loss = outputs.loss\n",
+    "            total_loss += loss.item()\n",
+    "            loss.backward()\n",
+    "\n",
+    "            torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "            optimizer.step()\n",
+    "            scheduler.step()\n",
+    "\n",
+    "        avg_train_loss = total_loss / len(train_dataloader)            \n",
+    "        print(\"  Average training loss: {0:.2f}\".format(avg_train_loss))\n",
+    "\n",
+    "        # Validation\n",
+    "        print(\"\\nRunning Validation...\")\n",
+    "\n",
+    "        model.eval()\n",
+    "        total_eval_accuracy = 0\n",
+    "        total_eval_loss = 0\n",
+    "\n",
+    "        for batch in validation_dataloader:\n",
+    "            \n",
+    "            batch = tuple(t.to(device) for t in batch)\n",
+    "            b_input_ids, b_input_mask, b_labels = batch\n",
+    "            \n",
+    "            with torch.no_grad():        \n",
+    "                outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask, labels=b_labels)\n",
+    "\n",
+    "            loss = outputs.loss\n",
+    "            total_eval_loss += loss.item()\n",
+    "            logits = outputs.logits\n",
+    "\n",
+    "            logits = logits.detach().cpu().numpy()\n",
+    "            label_ids = b_labels.to('cpu').numpy()\n",
+    "\n",
+    "            total_eval_accuracy += flat_accuracy(logits, label_ids)\n",
+    "        \n",
+    "        # Calculate precision, recall, and F1-score\n",
+    "        predictions, true_labels = get_predictions(model, validation_dataloader) # Assuming get_predictions function\n",
+    "        predicted_labels = np.argmax(predictions, axis=1)\n",
+    "        report = classification_report(true_labels, predicted_labels, output_dict=True)\n",
+    "        \n",
+    "        # Log metrics\n",
+    "        mlflow.log_metric(\"avg_train_loss\", avg_train_loss, step=epoch_i)\n",
+    "        mlflow.log_metric(\"avg_val_accuracy\", avg_val_accuracy, step=epoch_i)\n",
+    "        mlflow.log_metric(\"avg_val_loss\", avg_val_loss, step=epoch_i)\n",
+    "\n",
+    "        # Log precision, recall, and F1-score for each class\n",
+    "        for label, metrics in report.items():\n",
+    "            if label not in [\"accuracy\", \"macro avg\", \"weighted avg\"]:\n",
+    "                mlflow.log_metric(f\"class_{label}_precision\", metrics[\"precision\"], step=epoch_i)\n",
+    "                mlflow.log_metric(f\"class_{label}_recall\", metrics[\"recall\"], step=epoch_i)\n",
+    "                mlflow.log_metric(f\"class_{label}_f1-score\", metrics[\"f1-score\"], step=epoch_i)\n",
+    "\n",
+    "        avg_val_accuracy = total_eval_accuracy / len(validation_dataloader)\n",
+    "        print(\"  Accuracy: {0:.2f}\".format(avg_val_accuracy))\n",
+    "\n",
+    "        avg_val_loss = total_eval_loss / len(validation_dataloader)\n",
+    "        print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
+    "        mlflow.log_metric(\"avg_train_loss\", avg_train_loss, step=epoch_i)\n",
+    "        mlflow.log_metric(\"avg_val_accuracy\", avg_val_accuracy, step=epoch_i)\n",
+    "        mlflow.log_metric(\"avg_val_loss\", avg_val_loss, step=epoch_i)\n",
+    "        # Log macro and weighted average of precision, recall, and F1-score\n",
+    "        mlflow.log_metric(\"macro_avg_precision\", report[\"macro avg\"][\"precision\"], step=epoch_i)\n",
+    "        mlflow.log_metric(\"macro_avg_recall\", report[\"macro avg\"][\"recall\"], step=epoch_i)\n",
+    "        mlflow.log_metric(\"macro_avg_f1-score\", report[\"macro avg\"][\"f1-score\"], step=epoch_i)\n",
+    "\n",
+    "        mlflow.log_metric(\"weighted_avg_precision\", report[\"weighted avg\"][\"precision\"], step=epoch_i)\n",
+    "        mlflow.log_metric(\"weighted_avg_recall\", report[\"weighted avg\"][\"recall\"], step=epoch_i)\n",
+    "    mlflow.log_metric(\"weighted_avg_f1-score\", report[\"weighted avg\"][\"f1-score\"], step=epoch_i)\n",
+    "\n",
+    "    print(\"Training complete!\")\n",
+    "\n",
+    "    "
    ]
   },
   {
