--- a/scripts/final_notebook.ipynb
+++ b/scripts/final_notebook.ipynb
@@ -2015,7 +2015,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# Initialize the BERT tokenizer\n",
-    "tokenizer = BertTokenizer.from_pretrained('C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2020-twitter-stance-biden')\n",
+    "tokenizer = BertTokenizer.from_pretrained('C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2024-twitter-stance-biden')\n",
     "\n",
     "# Encoding labels\n",
     "label_encoder = LabelEncoder()\n",
@@ -2062,7 +2062,7 @@
     "\n",
     "# Initialize BertForSequenceClassification\n",
     "model = BertForSequenceClassification.from_pretrained(\n",
-    "    \"C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2020-twitter-stance-biden\",\n",
+    "    \"C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2024-twitter-stance-biden\",\n",
     "    num_labels = len(label_encoder.classes_) # The number of output labels\n",
     ")\n"
    ]
@@ -2176,8 +2176,113 @@
     "torch.cuda.manual_seed_all(seed_val)\n",
     "\n",
     "# BERT requires a special optimizer and a learning rate scheduler\n",
-    "optimizer = AdamW(model.parameters(), lr=1e-5, eps=1e-8)\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
     "epochs = 10\n",
+    "total_steps = len(train_dataloader) * epochs\n",
+    "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
+    "\n",
+    "# Function to calculate the accuracy of our predictions vs labels\n",
+    "def flat_accuracy(preds, labels):\n",
+    "    pred_flat = np.argmax(preds, axis=1).flatten()\n",
+    "    labels_flat = labels.flatten()\n",
+    "    return np.sum(pred_flat == labels_flat) / len(labels_flat)\n",
+    "\n",
+    "# Function for formatting elapsed times\n",
+    "def format_time(elapsed):\n",
+    "    elapsed_rounded = int(round((elapsed)))\n",
+    "    return str(datetime.timedelta(seconds=elapsed_rounded))\n",
+    "\n",
+    "# Training Loop\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "\n",
+    "for epoch_i in range(0, epochs):\n",
+    "    \n",
+    "    # Training\n",
+    "    print('======== Epoch {:} / {:} ========'.format(epoch_i + 1, epochs))\n",
+    "    print('Training...')\n",
+    "\n",
+    "    total_loss = 0\n",
+    "    model.train()\n",
+    "\n",
+    "    for step, batch in enumerate(train_dataloader):\n",
+    "        if step % 40 == 0 and not step == 0:\n",
+    "            elapsed = format_time(time.time() - t0)\n",
+    "            print('  Batch {:>5,}  of  {:>5,}.    Elapsed: {:}.'.format(step, len(train_dataloader), elapsed))\n",
+    "\n",
+    "        batch = tuple(t.to(device) for t in batch)\n",
+    "        b_input_ids, b_input_mask, b_labels = batch\n",
+    "\n",
+    "        model.zero_grad()        \n",
+    "\n",
+    "        outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask, labels=b_labels)\n",
+    "        loss = outputs.loss\n",
+    "        total_loss += loss.item()\n",
+    "        loss.backward()\n",
+    "\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "        optimizer.step()\n",
+    "        scheduler.step()\n",
+    "\n",
+    "    avg_train_loss = total_loss / len(train_dataloader)            \n",
+    "    print(\"  Average training loss: {0:.2f}\".format(avg_train_loss))\n",
+    "\n",
+    "    # Validation\n",
+    "    print(\"\\nRunning Validation...\")\n",
+    "\n",
+    "    model.eval()\n",
+    "    total_eval_accuracy = 0\n",
+    "    total_eval_loss = 0\n",
+    "\n",
+    "    for batch in validation_dataloader:\n",
+    "        \n",
+    "        batch = tuple(t.to(device) for t in batch)\n",
+    "        b_input_ids, b_input_mask, b_labels = batch\n",
+    "        \n",
+    "        with torch.no_grad():        \n",
+    "            outputs = model(b_input_ids, token_type_ids=None, attention_mask=b_input_mask, labels=b_labels)\n",
+    "\n",
+    "        loss = outputs.loss\n",
+    "        total_eval_loss += loss.item()\n",
+    "        logits = outputs.logits\n",
+    "\n",
+    "        logits = logits.detach().cpu().numpy()\n",
+    "        label_ids = b_labels.to('cpu').numpy()\n",
+    "\n",
+    "        total_eval_accuracy += flat_accuracy(logits, label_ids)\n",
+    "\n",
+    "    avg_val_accuracy = total_eval_accuracy / len(validation_dataloader)\n",
+    "    print(\"  Accuracy: {0:.2f}\".format(avg_val_accuracy))\n",
+    "\n",
+    "    avg_val_loss = total_eval_loss / len(validation_dataloader)\n",
+    "    print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
+    "\n",
+    "print(\"Training complete!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader, RandomSampler, SequentialSampler\n",
+    "from transformers import get_linear_schedule_with_warmup\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "# Set the seed value all over the place to make this reproducible\n",
+    "seed_val = 42\n",
+    "random.seed(seed_val)\n",
+    "np.random.seed(seed_val)\n",
+    "torch.manual_seed(seed_val)\n",
+    "torch.cuda.manual_seed_all(seed_val)\n",
+    "\n",
+    "# BERT requires a special optimizer and a learning rate scheduler\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
+    "epochs = 5\n",
     "total_steps = len(train_dataloader) * epochs\n",
     "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
     "\n",
@@ -2549,7 +2654,7 @@
     "import mlflow.pytorch\n",
     "\n",
     "mlflow.set_tracking_uri(\"http://localhost:5000/\")\n",
-    "mlflow.set_experiment(\"BERT Stance Detection\")\n",
+    "mlflow.set_experiment(\"BERT Stance Detection 2024\")\n",
     "with mlflow.start_run():\n",
     "    mlflow.log_param(\"learning_rate\", 2e-5)\n",
     "    mlflow.log_param(\"epochs\", epochs)\n",
@@ -2564,7 +2669,7 @@
     "\n",
     "    # BERT requires a special optimizer and a learning rate scheduler\n",
     "    optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
-    "    epochs = 10\n",
+    "    epochs = 4\n",
     "    total_steps = len(train_dataloader) * epochs\n",
     "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
     "\n",
@@ -2834,7 +2939,7 @@
     "import mlflow.pytorch\n",
     "\n",
     "mlflow.set_tracking_uri(\"http://localhost:5000/\")\n",
-    "mlflow.set_experiment(\"BERT Stance Detection\")\n",
+    "mlflow.set_experiment(\"BERT Stance Detection 2024_2\")\n",
     "with mlflow.start_run():\n",
     "    mlflow.log_param(\"learning_rate\", 2e-5)\n",
     "    mlflow.log_param(\"epochs\", epochs)\n",
@@ -3002,7 +3107,7 @@
     "import mlflow.pytorch\n",
     "\n",
     "mlflow.set_tracking_uri(\"http://localhost:5000/\")\n",
-    "mlflow.set_experiment(\"BERT Stance Detection\")\n",
+    "mlflow.set_experiment(\"BERT Stance Detection 2024_3\")\n",
     "with mlflow.start_run():\n",
     "    mlflow.log_param(\"learning_rate\", 2e-5)\n",
     "    mlflow.log_param(\"epochs\", epochs)\n",
@@ -4003,20 +4108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alert: accuracy dropped below threshold. Value: 0.7272727272727273, Threshold: 0.91\n",
-      "Metric precision is within the threshold\n",
-      "Alert: recall dropped below threshold. Value: 0.7272727272727273, Threshold: 0.91\n",
-      "Metric f1 is within the threshold\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mlflow.tracking import MlflowClient\n",
     "\n",
@@ -4070,7 +4164,7 @@
     "    return alerts\n",
     "\n",
     "# Example usage\n",
-    "experiment_name = \"experiment_bert-election2020-twitter-stance-biden\"  # Replace with your actual experiment name\n",
+    "experiment_name = \"BERT Stance Detection 2024\"  # Replace with your actual experiment name\n",
     "metrics = latest_metrics(experiment_name)\n",
     "alerts = metrics_vs_thresholds(metrics)\n",
     "for alert in alerts:\n",
@@ -4100,25 +4194,6 @@
    "outputs": [],
    "source": [
     "%pip install nest_asyncio\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import mlflow\n",
-    "\n",
-    "# Set the tracking URI if necessary\n",
-    "mlflow.set_tracking_uri(\"http://localhost:5000/\")\n",
-    "\n",
-    "# Get a list of all registered models\n",
-    "client = mlflow.tracking.MlflowClient()\n",
-    "for rm in client.list_registered_models():\n",
-    "    print(f\"Registered Model Name: {rm.name}\")\n",
-    "    for version in rm.latest_versions:\n",
-    "        print(f\"Version: {version.version}, Stage: {version.current_stage}, URI: {version.source}\")\n"
    ]
   },
   {
@@ -4192,7 +4267,7 @@
     "app = FastAPI()\n",
     "\n",
     "# Load the model and tokenizer\n",
-    "model_path = \"C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2020-twitter-stance-biden\"\n",
+    "model_path = \"C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2024-twitter-stance-biden\"\n",
     "tokenizer = BertTokenizer.from_pretrained(model_path)\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "model.eval()\n",
