--- a/scripts/final_notebook.ipynb
+++ b/scripts/final_notebook.ipynb
@@ -11,9 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tfx_bsl\\types\\common_types.py:26: The name tf.SparseTensorValue is deprecated. Please use tf.compat.v1.SparseTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\LENOVO\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tfx_bsl\\types\\common_types.py:27: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
@@ -69,9 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hyperparameters: {'batch_size': 16, 'learning_rate': 2e-05, 'epochs': 2, 'weight_decay': 0.01, 'max_grad_norm': 1.0, 'lr_step_size': 1, 'lr_gamma': 0.1}\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing necessary libraries\n",
     "import torch\n",
@@ -82,7 +103,7 @@
     "\n",
     "# Constants and Hyperparameters\n",
     "CSV_FILE_PATH = 'C:\\\\Users\\\\LENOVO\\\\Desktop\\\\CSC5382_SP24_FINALPROJECT\\\\scripts\\\\dataset_reduced.csv'  # Path to the dataset\n",
-    "PRETRAINED_LM_PATH = 'C:\\\\Users\\\\LENOVO\\\\Desktop\\\\bert-election2024-twitter-stance-biden'  # Path to the pre-trained language model\n",
+    "PRETRAINED_LM_PATH = 'C:\\\\Users\\\\LENOVO\\\\CSC5382_SP24_FINALPROJECT\\\\scripts\\\\bert-election2024-twitter-stance-biden'  # Path to the pre-trained language model\n",
     "HYPERPARAMS = {\n",
     "    \"batch_size\": 16,          # Batch size for training\n",
     "    \"learning_rate\": 2e-5,     # Learning rate for the optimizer\n",
@@ -99,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +152,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Biden is the best candidate for the job. #Bide...</td>\n",
+       "      <td>FAVOR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>@USER I can't trust Biden's policies. He's not...</td>\n",
+       "      <td>AGAINST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Let's support Biden in his efforts to improve ...</td>\n",
+       "      <td>FAVOR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I don't understand why anyone would vote for B...</td>\n",
+       "      <td>AGAINST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>@USER Biden's environmental policies are exact...</td>\n",
+       "      <td>FAVOR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       text    label\n",
+       "tweet_id                                                            \n",
+       "1         Biden is the best candidate for the job. #Bide...    FAVOR\n",
+       "2         @USER I can't trust Biden's policies. He's not...  AGAINST\n",
+       "3         Let's support Biden in his efforts to improve ...    FAVOR\n",
+       "4         I don't understand why anyone would vote for B...  AGAINST\n",
+       "5         @USER Biden's environmental policies are exact...    FAVOR"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the first 5 rows of the DataFrame 'data' to quickly inspect the initial entries\n",
     "# and check for the presence and format of data in the columns.\n",
@@ -142,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
